# rpi-pico-mpu6050

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  mpu6050_accelerometer_and_gyro_read.c
include/haw/: MPU6050.h
src/: CMakeLists.txt  MPU6050.c
